@@ -20,3 +20,4 @@ from firefox.firefox_profile import FirefoxProfile
 from chrome.webdriver import WebDriver as Chrome
 from ie.webdriver import WebDriver as Ie
 from remote.webdriver import WebDriver as Remote
+from common.desired_capabilities import DesiredCapabilities
