@@ -17,3 +17,4 @@ Selenium 2 Beta 2
 Selenium 2 Beta 3
 * Accept Untrusted Certificates in Firefox
 * Fixed Screenshots
+* Added DesiredCapabilities to simplify choosing Drivers
